--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/icon/icon.png">
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 </head>
 <body>
   <app-root>
@@ -20,5 +22,6 @@
     <div class="blob blob-4"></div>
     <div class="blob blob-5"></div>
   </div>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
