--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/x-icon" href="assets/icon/icon.png">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
+  <script type="text/javascript" src="//dev.geniemd.net/widget/widget.min.js"></script>
 </head>
 <body>
   <app-root>
